[package]
name = "love-letter-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = { path = "game" }

rand = "0.8"
anyhow = "1.0"
log = "0"
env_logger = "0.8"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }


[workspace]
members = [
    "game",
    "client"
]